[gd_scene load_steps=11 format=3 uid="uid://bh5x2psau7odb"]

[ext_resource type="Script" path="res://Scripts/Game/game_info.gd" id="1_8s0sb"]
[ext_resource type="Script" path="res://Scripts/Game/game_initializer.gd" id="1_rrtqo"]
[ext_resource type="PackedScene" uid="uid://f7vxvrtmrda" path="res://Scenes/GameScenes/fishing.tscn" id="2_cbw3k"]
[ext_resource type="PackedScene" uid="uid://v3n6hql7kbyr" path="res://Scenes/GameScenes/overworld.tscn" id="2_nnecm"]
[ext_resource type="Script" path="res://Scripts/Game/player_info.gd" id="2_wkyts"]
[ext_resource type="Script" path="res://Scripts/Boat/Overworld/boat_info.gd" id="3_yot51"]
[ext_resource type="PackedScene" uid="uid://2c0of41cehqe" path="res://Scenes/GameScenes/selling.tscn" id="4_1x0kt"]
[ext_resource type="Script" path="res://_debug/Script/newspaper_prototype.gd" id="8_1kkk2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltxy2"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_506sj"]
properties/0/path = NodePath("PlayerInfo:player_data")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="GameplayTest" type="Node"]
script = ExtResource("1_rrtqo")
overworld_scene = ExtResource("2_nnecm")
fishing_scene = ExtResource("2_cbw3k")
selling_scene = ExtResource("4_1x0kt")

[node name="GameInfo" type="Node" parent="." node_paths=PackedStringArray("game_overseer")]
script = ExtResource("1_8s0sb")
game_overseer = NodePath("..")

[node name="PlayerInfo" type="Node" parent="."]
script = ExtResource("2_wkyts")

[node name="BoatInfo" type="Node" parent="."]
script = ExtResource("3_yot51")

[node name="Control" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_1kkk2")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 75.0
offset_right = -90.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Newspaper"

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_ltxy2")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Test Newspaper.

This will show the player the events and other effects that will occur in the day.

Prototype Notes:
	
	There will only be three fishes to be found (Milkfish, Mackerel, and Tuna), and none of which harms the player. Any bottles that were collected will not add to the total amount of fish shown, but to demonstrate the plastic cleanup mechanic of the game. You can't die even if your oxygen meter (displayed on the rightside of the player) is depleted. There will only be one day and the game ends once you decided to sell your catch. 

Time is unlimited for the prototype, so catch until your heart's content!"

[node name="HSeparator3" type="HSeparator" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_ltxy2")

[node name="Close" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(190.285, 54.54)
layout_mode = 2
size_flags_horizontal = 0
text = "Close"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_506sj")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/GameScenes/overworld.tscn", "res://Scenes/GameScenes/fishing.tscn", "res://Scenes/GameScenes/selling.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Close" to="Control" method="close_newspaper"]
